Mejora de la compatibilidad con bibliotecas XML - Se valora el caso en el que se encuentre un parser Xerces en el classpath, lo cual podía hacer fallar la carga del XML con la información de los tipos de fichero.